--- a/prestasi.html
+++ b/prestasi.html
@@ -11,7 +11,6 @@
       width: 50px;
     }
     .header {
-      background-image: url('utama.jpg'); /* Ganti dengan URL gambar */
       background-size: cover;
       background-position: center;
       color: white;
@@ -37,45 +36,53 @@
           <li class="nav-item"><a class="nav-link text-white" href="profile.html">Profil</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="prestasi.html">Prestasi</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="jurusan.html">Jurusan</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="galeri.html">Galeri</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="ekstrakulikuler.html">Ekstrakurikuler</a></li>
         </ul>
       </div>
     </div>
   </nav>
+  <div class="container">
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+      <div class="col">
+        <div class="card p-0 mb-3">
+          <div class="card-header">
+            <img src="./assets/img/prestasi1.jpg" alt="gambar" class="thumbnail" width="600px">
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card p-0 mb-3">
+          <div class="card-header">
+            <img src="./assets/img/prestasi5.jpg" alt="gambar" class="thumbnail" width="600px">
+          </div>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="card p-0 mb-3">
+          <div class="card-header">
+            <img src="./assets/img/prestasi3.jpeg" alt="gambar" class="thumbnail" width="600px">
+          </div>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="card p-0 mb-3">
+          <div class="card-header">
+            <img src="./assets/img/prestasi2.jpg" alt="gambar" class="thumbnail" width="600px">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- Header -->
   <header class="header"></header>
 
-  <!-- Sambutan Kepala Sekolah -->
-  <section class="sambutan mt-5">
-    <div class="container">
-      <nav class="bg-primary text-white text-center py-3">
-        <h1 class="text-center text-white">
-          Sambutan Kepala Sekolah</h1>
-      </nav>
-    <div class="row p-3">
-      <div class="col-md-6 text-center">
-        <img src="Kepala Sekolah.JPG" alt="Foto Kepala Sekolah" width="300">
-      </div>
-      <div class="col-md-6">
-        <p>
-            Assalamu'alaikum Wr.wb,<br><br>
-            Selamat datang di SMKN 4 Tasikmalaya. Segala puji dan syukur kita panjatkan kehadirat Allah SWT, semoga kita semua ada dalam lindungan-Nya. Dan atas perkenan-Nya pula kami dapat menghadirkan website SMK Negeri 4 Tasikmalaya ini. Kami berharap dengan adanya website ini para pengunjung dapat mengenal lebih jauh tentang sekolah kami sehingga dapat mempererat tali silaturahmi antara sekolah dengan masyarakat demi kemajuan kita bersama.<br><br>
-            Kritik dan saran sangat kami harapkan untuk pengembangan ke depan. Terima kasih atas segala dukungan.<br><br>
-            Wassalamu'alaikum Warahmatullahi Wabarakatuh.
-          </p>
-        </div>
-      </div>
-    </div>
-  </section>
-
   <!-- Footer -->
   <footer class="bg-primary text-white text-center py-3">
-    <p>&copy; 2024 SMKN 4 Tasikmalaya. All rights reserved.</p>
-  </footer>
-
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+     <p>&copy; 2024 SMKN 4 Tasikmalaya. All rights reserved.</p>
+   </footer>
+ 
+   <!-- Bootstrap JS -->
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
