--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     }
   </style>
 </head>
-<body>
+
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
@@ -39,6 +39,7 @@
           <li class="nav-item"><a class="nav-link text-white" href="jurusan.html">Jurusan</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="galeri.html">Galeri</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="ekstrakulikuler.html">Ekstrakurikuler</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="kontak.html">Kontak</a></li>
         </ul>
       </div>
     </div>
@@ -47,13 +48,63 @@
   <!-- Header -->
   <header class="header"></header>
 
+  
+  <section class="prestasi-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3 mt-4">
+          <div class="card shadow-sm">
+            <div class="card-body text-center">
+              <p>GURU</p>
+              <p>60</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3 mt-4">
+          <div class="card shadow-sm">
+            <div class="card-body text-center">
+              <p>SISWA</p>
+              <p>1116</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3 mt-4">
+          <div class="card shadow-sm">
+            <div class="card-body text-center">
+              <p>ADMINISTRASI</p>
+              <p>10</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3 mt-4">
+          <div class="card shadow-sm">
+            <div class="card-body text-center">
+              <p>Ekstrakurikuler</p>
+              <p>20</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
   <!-- Sambutan Kepala Sekolah -->
   <section class="sambutan mt-5">
-    <div class="container">
-      <nav class="bg-primary text-white text-center py-3">
-        <h1 class="text-center text-white">
-          Sambutan Kepala Sekolah</h1>
-      </nav>
+    <header>
+          <div class="container-fluid bg-primary text-white text-center py-3">
+            <div class="row">
+              <div class="col">
+                <h1 class="text-center">Sambutan Kepala Sekolah</h1>
+              </div>
+            </div>
+          </div>
+        </header>
+      </section>
+  <section>
     <div class="row p-3">
       <div class="col-md-6 text-center">
         <img src="Kepala Sekolah.JPG" alt="Foto Kepala Sekolah" width="300">
@@ -69,6 +120,7 @@
       </div>
     </div>
   </section>
+
 
   <!-- Footer -->
   <footer class="bg-primary text-white text-center py-3">
