--- a/jurusan.html
+++ b/jurusan.html
@@ -36,7 +36,10 @@
           <li class="nav-item"><a class="nav-link text-white" href="profile.html">Profil</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="prestasi.html">Prestasi</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="jurusan.html">Jurusan</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="galeri.html">Galeri</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="ekstrakulikuler.html">Ekstrakurikuler</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="kontak.html">Kontak</a></li>
+
         </ul>
       </div>
     </div>
@@ -55,32 +58,32 @@
                <div class="row">
                     <div class="col-4 my-3">
                          <div class="alert alert-secondary">
-                              <h2>Jurusan Pengembangan Perangkat lunak & GIM</h2>
-                         <p>Rekayasa Perangkat Lunak (RPL, atau dalam bahasa Inggris: Software Engineering atau SE) adalah satu bidang profesi yang mendalami cara-cara pengembangan perangkat lunak termasuk pembuatan, pemeliharaan, manajemen organisasi pengembangan perangkat lunak dan manajemen kualitas.</p>
+                              <h2>Pengembangan Perangkat lunak & GIM</h2>
+                              <p> Jurusan ini mempelajari cara merancang, mengembangkan, dan memelihara perangkat lunak, termasuk aplikasi berbasis desktop, web, dan mobile. Siswa juga diajarkan teknik pembuatan gim, seperti desain level, animasi, dan pemrograman gim, menggunakan teknologi dan perangkat lunak terkini.</p>
                          </div>
                     </div>
                     <div class="col-4 my-3">
                          <div class="alert alert-secondary">
-                              <h2>Jurusan Teknik Komputer Dan Jaringan </h2>
-                              <p>Teknik Komputer dan Jaringan merupakan ilmu berbasis Teknologi Informasi dan Komunikasi terkait kemampuan algoritma, dan pemrograman komputer, perakitan komputer, perakitan jaringan komputer, dan pengoperasian perangkat lunak, dan internet. Teknik komputer, dan jaringan juga membutuhkan pemahaman di bidang teknik listrik, dan ilmu komputer sehingga mampu mengembangkan, dan mengintegrasikan perangkat lunak, dan perangkat keras.</p>
+                              <h2>Teknik Komputer Dan Jaringan </h2>
+                              <p>Jurusan ini fokus pada penguasaan konsep dan praktik dalam membangun, mengelola, dan mengamankan jaringan komputer. Siswa akan mempelajari teknologi jaringan, administrasi server, troubleshooting, serta konfigurasi perangkat jaringan seperti router dan switch.</p>
                          </div>
                     </div>
                     <div class="col-4 my-3">
                          <div class="alert alert-secondary">
-                              <h2>Jurusan Teknik Bisnis Sepeda Motor</h2>
-            <p>Teknik dan Bisnis Sepeda Motor adalah kompetensi keahlian pada Bidang Studi Keahlian Teknologi dan Rekayasa Program Studi Keahlian Teknik Otomotif yang menekankan pada keterampilan pelayanan jasa mekanik kendaraan sepeda motor roda dua. Kompetensi Keahlian Teknik dan Bisnis Sepeda Motor menyiapkan peserta didik untuk bekerja pada bidang pekerjaan yang dikelola oleh badan, instansi atau perusahaan maupun pribadi (wirausaha).</p>
+                              <h2>Teknik Bisnis Sepeda Motor</h2>
+                              <p>Jurusan ini mempelajari teknik perawatan, perbaikan, dan modifikasi sepeda motor, sekaligus menanamkan keterampilan kewirausahaan. Siswa diajarkan cara membuka dan mengelola bisnis bengkel, termasuk aspek pemasaran dan manajemen.</p>
                          </div>
                     </div>
                     <div class="col-4 my-3">
                          <div class="alert alert-secondary">
-                              <h2>Jurusan Teknik Otomasi Industri</h2>
-            <p>Jurusan ini berfokus pada teknologi otomotif yang diterapkan dalam skala industri. Siswa akan belajar tentang sistem mekanik kendaraan modern, produksi komponen otomotif, dan pengelolaan peralatan industri yang berkaitan dengan otomotif.</p>
+                              <h2>Teknik Otomasi Industri</h2>
+                              <p>Jurusan ini berfokus pada teknologi otomotif yang diterapkan dalam skala industri. Siswa akan belajar tentang sistem mekanik kendaraan modern, produksi komponen otomotif, dan pengelolaan peralatan industri yang berkaitan dengan otomotif.</p>
                          </div>
                     </div>
                     <div class="col-4 my-3">
                          <div class="alert alert-secondary">
-                              <h2>Jurusan Desain Komunikasi Visual</h2>
-             <p>Jurusan ini mengajarkan seni dan teknik dalam menciptakan desain visual yang komunikatif dan menarik. Materi meliputi desain grafis, fotografi, ilustrasi, dan media digital untuk kebutuhan branding, promosi, atau media publikasi.</p>
+                              <h2>Desain Komunikasi Visual</h2>
+                              <p>Jurusan ini mengajarkan seni dan teknik dalam menciptakan desain visual yang komunikatif dan menarik. Materi meliputi desain grafis, fotografi, ilustrasi, dan media digital untuk kebutuhan branding, promosi, atau media publikasi.</p>
                          </div>
                     </div>
                </div>
