--- a/profile.html
+++ b/profile.html
@@ -37,7 +37,9 @@
           <li class="nav-item"><a class="nav-link text-white" href="profile.html">Profil</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="prestasi.html">Prestasi</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="jurusan.html">Jurusan</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="galeri.html">Galeri</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="ekstrakulikuler.html">Ekstrakurikuler</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="kontak.html">Kontak</a></li>
         </ul>
       </div>
     </div>
@@ -78,6 +80,66 @@
        </div>
      </div>
    </section>
+
+   <!-- Identitas Sekolah Section -->
+   <header>
+    <nav class="bg-primary text-white text-center py-3 mt-4">
+      <h1 class="text-center"> identitas sekolah</h1>
+    </nav>
+  </header>
+  <div class="row">
+    <div class="col">
+      <div class="jurusan p-3">
+        <h1 class="text-center text-white">identitas sekolah</h1>
+      </div>
+    </div>
+   </div>
+   
+   <div class="row-p3">
+    <div class="col-11">
+      <div class="row">
+        <div class="col-6 my-3">
+          <div class="card">
+            <h3>Nama Sekolah</h3>
+            <p>SMK Negeri 4 Tasikmalaya</p>
+          </div>
+        </div>
+        <div class="col-6 my-3">
+          <div class="card">
+            <h3>NPSN</h3>
+            <p>20276063</p>
+          </div>
+        </div>
+        <div class="col-6 my-3">
+          <div class="card">
+            <h3>Nomor Statistik Sekolah</h3>
+            <p>401327810004</p>
+          </div>
+        </div>
+        <div class="col-6 my-3">
+          <div class="card">
+            <h3>Nama Sekolah</h3>
+            <p>SMK Negeri 4 Tasikmalaya</p>
+          </div>
+        </div>
+        <div class="col-6 my-3">
+          <div class="card">
+            <h3>Alamat</h3>
+            <p>Jalan Depok RT 02 RW 05</p>
+          </div>
+        </div>
+        <div class="col-6 my-3">
+          <div class="card">
+            <h3>Telepon</h3>
+            <p>+62 265 312059</p>
+          </div>
+        </div>
+      </div>
+      <div class="co">&nbsp;</div>
+    </div>
+  </div>
+</section>
+
 
    <header class="header"></header>
     <!-- Footer -->
