--- a/ekstrakulikuler.html
+++ b/ekstrakulikuler.html
@@ -11,7 +11,6 @@
       width: 50px;
     }
     .header {
-      background-image: url('utama.jpg'); /* Ganti dengan URL gambar */
       background-size: cover;
       background-position: center;
       color: white;
@@ -37,11 +36,189 @@
           <li class="nav-item"><a class="nav-link text-white" href="profile.html">Profil</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="prestasi.html">Prestasi</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="jurusan.html">Jurusan</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="galeri.html">Galeri</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="ekstrakulikuler.html">Ekstrakurikuler</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="kontak.html">Kontak</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
+  <section id="ekskul" class="container my-5">
+    <h2 class="text-center mb-4">EKSTRAKURIKULER SMK NEGERI 4 TASIKMALAYA</h2>
+    <div class="row">
+
+      <!-- 20 Cards for Ekstrakurikuler -->
+      <!-- Example cards, duplicate and change the titles/content as needed -->
+      <!-- You can replace the img src and text with actual content for each ekstrakurikuler -->
+      <!-- 1st Card -->
+      <div class="col-md-3 mb-4">
+        <div class="card">
+          <img src="./salsa-ujikom/assets/img/BASKET.jpg" class="card-img-top" alt="">
+          <div class="card-body">
+            <h2 class="text-center mt-4">BASKET</h2>
+          </div>
+        </div>
+      </div>
+
+      <!-- 2nd Card -->
+      <div class="col-md-3 mb-4">
+        <div class="card">
+          <img src="./salsa-ujikom/assets/img/BULTANG.jpg" class="card-img-top" alt="Ekstrakurikuler 2">
+          <div class="card-body">
+            <h2 class="text-center mt-4">BULU TANGKIS</h2>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 mb-4">
+        <div class="card">
+          <img src="./salsa-ujikom/assets/img/CJ.jpg" class="card-img-top" alt="Ekstrakurikuler 2">
+          <div class="card-body">
+            <h2 class="text-center mt-4">CJ</h2>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 mb-4">
+        <div class="card">
+          <img src="./salsa-ujikom/assets/img/EC.jpg" class="card-img-top" alt="Ekstrakurikuler 2">
+          <div class="card-body">
+            <h2 class="text-center mt-4">ENGLISH CLUB</h2>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 mb-4">
+        <div class="card">
+          <img src="./salsa-ujikom/assets/img/FUTSALPUTRI.jpg" class="card-img-top" alt="Ekstrakurikuler 20">
+          <div class="card-body">
+            <h2 class="text-center mt-4">FUTSAL PUTRI</h2>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 mb-4">
+        <div class="card">
+          <img src="./salsa-ujikom/assets/img/IT.jpg" class="card-img-top" alt="Ekstrakurikuler 20">
+          <div class="card-body">
+            <h2 class="text-center mt-4">IT</h2>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 mb-4">
+        <div class="card">
+          <img src="./salsa-ujikom/assets/img/LASKAR.jpg" class="card-img-top" alt="Ekstrakurikuler 20">
+          <div class="card-body">
+            <h2 class="text-center mt-4">LASKAR</h2>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 mb-4">
+        <div class="card">
+          <img src="./salsa-ujikom/assets/img/PD.jpg" class="card-img-top" alt="Ekstrakurikuler 20">
+          <div class="card-body">
+            <h2 class="text-center mt-4">PD</h2>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 mb-4">
+        <div class="card">
+          <img src="./salsa-ujikom/assets/img/pks.jpg" class="card-img-top" alt="Ekstrakurikuler 20">
+          <div class="card-body">
+            <h2 class="text-center mt-4">PKS</h2>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 mb-4">
+        <div class="card">
+          <img src="./salsa-ujikom/assets/img/PLH.jpg" class="card-img-top" alt="Ekstrakurikuler 20">
+          <div class="card-body">
+            <h2 class="text-center mt-4">PLH</h2>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 mb-4">
+        <div class="card">
+          <img src="./salsa-ujikom/assets/img/pmr.jpg" class="card-img-top" alt="Ekstrakurikuler 20">
+          <div class="card-body">
+            <h2 class="text-center mt-4">PMR</h2>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 mb-4">
+        <div class="card">
+          <img src="./salsa-ujikom/assets/img/pramuka.jpg" class="card-img-top" alt="Ekstrakurikuler 20">
+          <div class="card-body">
+            <h2 class="text-center mt-4">PRAMUKA</h2>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 mb-4">
+        <div class="card">
+          <img src="./salsa-ujikom/assets/img/rohis.jpg" class="card-img-top" alt="Ekstrakurikuler 20">
+          <div class="card-body">
+            <h2 class="text-center mt-4">ROHIS</h2>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 mb-4">
+        <div class="card">
+          <img src="./salsa-ujikom/assets/img/volly.jpg" class="card-img-top" alt="Ekstrakurikuler 20">
+          <div class="card-body">
+            <h2 class="text-center mt-4">VOLLY</h2>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 mb-4">
+        <div class="card">
+          <img src="./salsa-ujikom/assets/img/sepak-bola.jpg" class="card-img-top" alt="Ekstrakurikuler 20">
+          <div class="card-body">
+            <h2 class="text-center mt-4">SEPAK BOLA</h2>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 mb-4">
+        <div class="card">
+          <img src="./salsa-ujikom/assets/img/futsal-laki.jpg" class="card-img-top" alt="Ekstrakurikuler 20">
+          <div class="card-body">
+            <h2 class="text-center mt-4">FUTSAL LAKI-LAKI</h2>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 mb-4">
+        <div class="card">
+          <img src="./salsa-ujikom/assets/img/tari.jpg" class="card-img-top" alt="Ekstrakurikuler 20">
+          <div class="card-body">
+            <h2 class="text-center mt-4">TARI</h2>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 mb-4">
+        <div class="card">
+          <img src="./salsa-ujikom/assets/img/paskibra.jpg" class="card-img-top" alt="Ekstrakurikuler 20">
+          <div class="card-body">
+            <h2 class="text-center mt-4">PASKIBRA</h2>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 mb-4">
+        <div class="card">
+          <img src="./salsa-ujikom/assets/img/safety reading.jpg" class="card-img-top" alt="Ekstrakurikuler 20">
+          <div class="card-body">
+            <h2 class="text-center mt-4">SAFETY READING</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
+
   <!-- Header -->
   <header class="header"></header>
+
+  <!-- Footer -->
+  <footer class="bg-primary text-white text-center py-3">
+    <p>&copy; 2024 SMKN 4 Tasikmalaya. All rights reserved.</p>
+  </footer>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
