--- a/kontak.html
+++ b/kontak.html
@@ -43,56 +43,54 @@
       </div>
     </div>
   </nav>
-  <div class="container">
-     <div class="row justify-content-center">
-         <div class="col-5 ">
-             <div class="card my-3">
-                 <div class="card-header">
-                     <img src="./salsa-ujikom/assets/img/galeri1.jpg" class="thumbnail" width="500px">
-                 </div>
-             </div>
-         </div>
-         <div class="col-5 ">
-             <div class="card my-3">
-                 <div class="card-header">
-                     <img src="./salsa-ujikom/assets/img/galeri6.jpg " class="thumbnail" width="500px">
-                 </div>
-             </div>
-         </div>
-         <div class="col-5 ">
-             <div class="card my-3">
-                 <div class="card-header">
-                     <img src="./salsa-ujikom/assets/img/galeri2.jpg " class="thumbnail" width="500px">
-                 </div>
-             </div>
-         </div>
-         <div class="col-5 ">
-             <div class="card my-3">
-                 <div class="card-header">
-                     <img src="./salsa-ujikom/assets/img/galeri3.jpg " class="thumbnail" width="500px">
-                 </div>
-             </div>
-         </div>
-         <div class="col-5 ">
-             <div class="card my-3">
-                 <div class="card-header">
-                     <img src="./salsa-ujikom/assets/img/galeri4.jpg " class="thumbnail" width="500px">
-                 </div>
-             </div>
-         </div>
-         <div class="col-5 ">
-             <div class="card my-3">
-                 <div class="card-header">
-                     <img src="./salsa-ujikom/assets/img/galeri5.jpg " class="thumbnail" width="500px">
-                 </div>
-             </div>
-         </div>
-     </div>
+
+  <h2 class="section-title text-center my-4">Kontak Kami</h2>
+  <div class="container content">
+      <div class="row justify-content-center">
+          <div class="col-md-6">
+              <div class="card">
+                  <div class="card-body">
+                      <h3 class="card-title text-center">Formulir Kontak</h3>
+                      <form action="/submit-form" method="POST">
+                          <!-- Nama -->
+                          <div class="form-group">
+                              <label for="name">Nama Lengkap</label>
+                              <input type="text" class="form-control" id="name" name="name" required>
+                          </div>
+  
+                          <!-- Email -->
+                          <div class="form-group">
+                              <label for="email">Email</label>
+                              <input type="email" class="form-control" id="email" name="email" required>
+                          </div>
+  
+                          <!-- Pesan -->
+                          <div class="form-group">
+                              <label for="message">Pesan</label>
+                              <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
+                          </div>
+  
+                          <!-- Kirim -->
+                          <button type="submit" class="btn btn-primary btn-block">Kirim Pesan</button>
+                      </form>
+                  </div>
+              </div>
+          </div>
+      </div>
+
+      <div class="row justify-content-center mt-5">
+        <div class="col-md-6">
+            <h3 class="text-center">Alamat & Informasi Kontak</h3>
+            <p class="text-center">
+                <strong>SMKN 4 Tasikmalaya</strong><br>
+                Jl. Raya No.123, Tasikmalaya, Jawa Barat, Indonesia<br>
+                <strong>Telepon:</strong> (0265) 123-4567<br>
+                <strong>Email:</strong> info@smkn4tasikmalaya.sch.id
+            </p>
+        </div>
+    </div>
   </div>
-
-
-  <!-- Header -->
-  <header class="header"></header>
+  
 
   <!-- Footer -->
   <footer class="bg-primary text-white text-center py-3">
