--- a/prestasi.html
+++ b/prestasi.html
@@ -36,6 +36,7 @@
           <li class="nav-item"><a class="nav-link text-white" href="profile.html">Profil</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="prestasi.html">Prestasi</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="jurusan.html">Jurusan</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="galeri.html">Galeri</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="ekstrakulikuler.html">Ekstrakurikuler</a></li>
         </ul>
       </div>
